--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+*.txt
 
 # Test binary, built with `go test -c`
 *.test
@@ -30,5 +31,3 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
-
-tool/*.txt
