--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,16 @@
 {
-  "name": "hello-go",
+  "name": "go-agent",
   "image": "mcr.microsoft.com/devcontainers/base:ubuntu-22.04",
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {},
     "ghcr.io/devcontainers/features/go:1": { "version": "1.22" },
     "ghcr.io/devcontainers/features/python:1": { "version": "3.11" }
   },
-  "postCreateCommand": "sudo apt-get update && sudo apt-get install -y make curl",
+  "postCreateCommand": "bash -lc 'set -euo pipefail; sudo apt-get update; sudo apt-get install -y make curl protobuf-compiler; go install google.golang.org/protobuf/cmd/protoc-gen-go@latest; go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest; echo \"protoc=$(protoc --version)\"; echo \"protoc-gen-go=$($HOME/go/bin/protoc-gen-go --version)\"; echo \"protoc-gen-go-grpc=$($HOME/go/bin/protoc-gen-go-grpc --version)\"'",
   "remoteUser": "vscode",
   "workspaceFolder": "/workspaces/go-agent-core",
-  "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/go-agent-core,type=bind"
+  "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/go-agent-core,type=bind",
+  "remoteEnv": {
+    "PATH": "${containerEnv:PATH}:/home/vscode/go/bin"
+  }
 }
