--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
     "ghcr.io/devcontainers/features/go:1": { "version": "1.22" },
     "ghcr.io/devcontainers/features/python:1": { "version": "3.11" }
   },
-  "postCreateCommand": "bash -lc 'set -euo pipefail; sudo apt-get update; sudo apt-get install -y make curl protobuf-compiler; go install google.golang.org/protobuf/cmd/protoc-gen-go@latest; go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest; echo \"protoc=$(protoc --version)\"; echo \"protoc-gen-go=$($HOME/go/bin/protoc-gen-go --version)\"; echo \"protoc-gen-go-grpc=$($HOME/go/bin/protoc-gen-go-grpc --version)\"'",
+  "postCreateCommand": "bash -lc 'set -euo pipefail; sudo apt-get update; sudo apt-get install -y make curl protobuf-compiler; go install google.golang.org/protobuf/cmd/protoc-gen-go@latest; go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest; export PATH=\"$PATH:/home/vscode/go/bin\"; echo \"protoc=$(protoc --version)\"; echo \"protoc-gen-go=$(protoc-gen-go --version)\"; echo \"protoc-gen-go-grpc=$(protoc-gen-go-grpc --version)\"; make proto; go mod tidy'",
   "remoteUser": "vscode",
   "workspaceFolder": "/workspaces/go-agent-core",
   "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/go-agent-core,type=bind",
